# LadderLogicProgram

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile-pl  PLC.pro  README.md
App/: App.pro  Content.qml  FileButton.qml  Info.qml  LdSymbolsBar.qml  ProgramView.qml  ToolMenu.qml  config.hpp  interfaceButtons.cpp  interfaceButtons.hpp  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
CodeGenerator/: codeGenerator.cpp  codeGenerator.hpp  codeParameter.cpp  codeParameter.hpp  generateErrors.cpp  generateErrors.hpp  parametersArray.cpp  parametersArray.hpp  parametersGenetator.cpp  parametersGenetator.hpp  structureGenerator.cpp  structureGenerator.hpp
ConsoleLog/: ConsoleLog.qml  consoleLog.cpp  consoleLog.hpp  logInterface.hpp  qml.qrc
Examples/: Basic.plc  Licznik.plc  Przyciski.plc  Timer.plc  Timers1.plc  Timers2.plc
Ld/: address.cpp  address.hpp  base.cpp  base.hpp  coil.cpp  coil.hpp  contact.cpp  contact.hpp  counter.cpp  counter.hpp  drag.cpp  drag.hpp  dragData.cpp  dragData.hpp  drop.cpp  drop.hpp  dropValidator.hpp  emptyDrop.cpp  emptyDrop.hpp  input.cpp  input.hpp  ldFunction.cpp  ldFunction.hpp  line.cpp  line.hpp  node.cpp  node.hpp  output.cpp  output.hpp  painter.cpp  painter.hpp  painterLd.cpp  painterLd.hpp  qml.qrc  text.cpp  text.hpp  timer.cpp  timer.hpp  type.hpp  weektimer.cpp  (+1 more)
LdFactory/: factory.hpp  factoryLd.cpp  factoryLd.hpp
LdProperty/: LdProperty_combobox.qml  LdProperty_comboboxField.qml  LdProperty_textField.qml  address.cpp  address.hpp  addressField.cpp  addressField.hpp  base.cpp  base.hpp  comboboxField.cpp  comboboxField.hpp  daysOfWeekField.cpp  daysOfWeekField.hpp  image.cpp  image.hpp  ldPropertyFunctions.cpp  ldPropertyFunctions.hpp  multitextfield.cpp  multitextfield.hpp  qml.qrc  textField.cpp  textField.hpp  textWithComboboxField.cpp  textWithComboboxField.hpp  timeField.cpp  timeField.hpp  type.hpp  typeField.cpp  typeField.hpp
LibComponentLd/: LibComponentLd.pro  coil.cpp  coil.hpp  componentLd.cpp  componentLd.hpp  contact.cpp  contact.hpp  drag.cpp  drag.hpp  input.cpp  input.hpp  ldPainter.cpp  ldPainter.hpp  line.cpp  line.hpp  node.cpp  node.hpp  output.cpp  output.hpp  symbolsBar.cpp  symbolsBar.hpp
LibLd/: LdFunction.cpp  LibLd.pro  base.cpp  base.hpp  coil.cpp  coil.hpp  contact.cpp  contact.hpp  drag.cpp  drag.hpp  dragData.hpp  drop.cpp  drop.hpp  dropValidator.cpp  dropValidator.hpp  emptyDrop.cpp  emptyDrop.hpp  factory.cpp  factory.hpp  factoryContainer.cpp  factoryContainer.hpp  input.cpp  input.hpp  line.cpp  line.hpp  node.cpp  node.hpp  painter.cpp  painter.hpp  symbolsBar.cpp  symbolsBar.hpp  type.hpp
Network/: NetworkLabel.qml  Position.hpp  containerLd.cpp  containerLd.hpp  dragNetworkData.cpp  dragNetworkData.hpp  dropNetworkValidator.cpp  dropNetworkValidator.hpp  network.cpp  network.hpp  networkList.cpp  networkList.hpp  position.cpp  qml.qrc
PropertiesList/: PropertiesList.qml  PropertyList.qml  comboboxProperty.qml  daysOfWeekFieldProperty.qml  imageProperty.qml  multitextFieldProperty.qml  propertiesList.cpp  propertiesList.hpp  qml.qrc  textFieldProperty.qml  textWithComboboxFieldProperty.qml  timeFieldProperty.qml
PropertyList/: propertiesList.cpp  propertiesList.hpp  qml.qrc
Saver/: saver.cpp  saver.hpp
SelectItem/: selectItem.cpp  selectItem.hpp
SerialPort/: SerialPortWindow.qml  qml.qrc  serialPort.cpp  serialPort.hpp
UserInterface/: dropDeleter.cpp  dropDeleter.hpp  imitatorLd.cpp  imitatorLd.hpp  symbolsBar.cpp  symbolsBar.hpp
uTest/: ComponentLd-Test.cpp  LdPainter-Test.cpp  SymbolsBar-Test.cpp  firstTest.cpp  uTest.pro
uTest/CodeGenerator/: CodeGenerator-Test.cpp  CodeGenerator.cpp
uTest/Ld/: Base-Test.cpp  Drag-Test.cpp  Drop-Test.cpp  LdType-Test.cpp  Painter-Test.cpp
uTest/LdFactory/: FactoryContainer-Test.cpp  FactoryLd-Test.cpp
uTest/LibLd/: Base-Test.cpp  ComponentLd-Test.cpp  Drag-Test.cpp  Factory-Test.cpp  LdPainter-Test.cpp  LdType-Test.cpp  Painter-Test.cpp  SymbolsBar-Test.cpp
uTest/Network/: ContainerLd-Add-Test.cpp  ContainerLd-BuildTest.cpp  ContainerLd-Move-Test.cpp  ContainerLd-Remove-Test.cpp  ContainerLd-Size-Test.cpp  ContainerLd-Test.cpp  DragNetworkData-Test.cpp  DropNetworkValidator-Test.cpp  Network-Test.cpp  NetworkList-Test.cpp
uTest/Saver/: Saver-Test.cpp
uTest/UserInterface/: SymbolsBar-Test.cpp
